// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login -> Already logged in 1`] = `
Object {
  "message": "Session is already authenticated",
}
`;

exports[`Login -> Disabled user 1`] = `
Object {
  "message": "Incorrect email or password",
}
`;

exports[`Login -> Invalid credentials 1`] = `
Object {
  "message": "Incorrect email or password",
}
`;

exports[`Login -> No email 1`] = `
Object {
  "feedback": Object {
    "email": Array [
      "A valid email is required.",
    ],
  },
  "message": "Validation Error",
}
`;

exports[`Login -> No password 1`] = `
Object {
  "feedback": Object {
    "password": Array [
      "A valid password is required.",
    ],
  },
  "message": "Validation Error",
}
`;

exports[`Login -> Valid credentials 1`] = `
Object {
  "email": "general_test@example.com",
  "emailVerified": true,
  "firstName": "General",
  "id": 1,
  "lastName": "Test",
}
`;
